--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "axios": "^1.2.2",
     "js-yaml": "^4.1.0",
+    "log-utils": "^1.0.0",
+    "node-windows": "^1.0.0-beta.8",
     "yargs": "^17.6.2"
   }
 }
