--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 node_modules/
 conf.yml
 # Ignore Application Caches
-.cache/ps_data.json
-.cache/ad_data.json
+.cache/
+!.cache/.gitkeep
+# Ignore any custom scripts
+scripts/
+!scripts/.gitkeep
