--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "bin": {
     "ps-to-ad": "bin/ps2ad.js"
   },
+  "engines": {
+    "node": "^16.15.0",
+    "npm": "^8.12.0"
+  },
+  "os": [
+    "win32"
+  ],
   "scripts": {
     "start": "node bin/ps2ad.js",
     "lint": "prettier --check -u -w .",
-    "js-docs": "jsdoc2md ./src/*.js ./src/integrations/*.js > ./docs/Source_Documentation.md"
+    "js-docs": "jsdoc2md ./src/*.js ./src/integrations/*.js > ./docs/Source_Documentation.md",
+    "eslint": "npx eslint . --fix-dry-run"
   },
   "author": "confused-Techie",
   "license": "MIT",
@@ -21,7 +29,35 @@
     "yargs": "^17.6.2"
   },
   "devDependencies": {
+    "eslint": "^8.32.0",
+    "eslint-plugin-node": "^11.1.0",
     "jsdoc-to-markdown": "^8.0.0",
     "prettier": "^2.8.3"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "commonjs": true,
+      "es2021": true,
+      "node": true,
+      "browser": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 12
+    },
+    "extends": [
+      "eslint:all",
+      "plugin:node/recommended"
+    ],
+    "plugins": [
+      "node"
+    ],
+    "rules": {
+      "no-console": 0,
+      "no-process-exit": 0,
+      "camelcase": 1,
+      "no-ternary": 0
+    },
+    "globals": {}
   }
 }
