--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "engines": {
     "node": "^16.15.0",
-    "npm": "^8.12.0"
+    "npm": "^8.12.0",
+    "powerschool": "^22.5.1.1.0"
   },
   "os": [
     "win32"
