--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "powerschool": "^22.5.1.1.0"
   },
   "os": [
-    "win32"
+    "win32",
+    "linux"
   ],
   "scripts": {
     "start": "node bin/ps2ad.js",
