--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
       "no-console": 0,
       "no-process-exit": 0,
       "camelcase": 1,
-      "no-ternary": 0
+      "no-ternary": 0,
+      "max-len": ["error", 110],
+      "strict": 0,
+      "sort-keys": 0
     },
     "globals": {}
   }
