--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.2.2",
     "js-yaml": "^4.1.0",
     "log-utils": "^1.0.0",
+    "nodemailer": "^6.9.1",
     "yargs": "^17.6.2"
   },
   "devDependencies": {
