--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.2.2",
+    "joi": "^17.9.2",
     "js-yaml": "^4.1.0",
     "log-utils": "^1.0.0",
     "nodemailer": "^6.9.1",
