--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "scripts": {
     "start": "node bin/ps2ad.js",
+    "test": "node --test test/",
     "lint": "prettier --check -u -w .",
     "js-docs": "jsdoc2md ./src/*.js ./src/integrations/*.js > ./docs/Source_Documentation.md",
     "eslint": "npx eslint . --fix-dry-run"
